--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
@@ -20,6 +19,7 @@ body {
     margin-left: 30%;
     margin-top: 7rem;
 }
+
 /* <!-- heaading content were start here  --> */
 
 
@@ -36,7 +36,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     padding-top: 10px;
-    
+
 }
 
 /* <!-- heaading content were end here  --> */
@@ -50,51 +50,53 @@ body {
     padding-bottom: 2rem;
 }
 
-.main h1 , .footer h1{
+.main h1,
+.footer h1 {
     font-size: 1.65rem;
     padding-bottom: 1.50rem;
     padding-top: 4rem;
 
 }
 
-.main p{
+.main p {
     padding-bottom: 1rem;
 }
 
-.main ol{
+.main ol {
     padding-left: 1.25rem;
     line-height: 2rem;
 }
 
-.main ol li{
-width: 100%;
-font-size: 16px;
-padding-bottom: 1rem;
+.main ol li {
+    width: 100%;
+    font-size: 16px;
+    padding-bottom: 1rem;
 }
 
-.main span{
+.main span {
     color: #4E80EE;
 }
+
 /* <!-- main content were end here --> */
 
-hr{
+hr {
     color: rgba(128, 128, 128, 0.303);
     border: 1px solid;
     margin-left: 30px;
     background-color: #d2d5da27;
     width: 38rem;
-    
+
 }
 
 /* footer content were start from here  */
 
-.footer{
-    background:#d2d5da27 ;
+.footer {
+    background: #d2d5da27;
     padding-left: 2rem;
     padding-bottom: 2rem;
 }
 
-.footer p{
+.footer p {
     padding-bottom: 1rem;
 }
 
@@ -103,96 +105,105 @@ hr{
     margin-left: 1rem;
 }
 
-.footer li span{
-    color:black;
+.footer li span {
+    color: black;
     font-weight: 600;
     line-height: 2rem;
     padding-right: 7px;
 }
 
-.footer h5{
+.footer h5 {
     font-weight: 500;
     font-size: 18px;
     padding-top: 2rem;
 
 }
 
-.footer h5 span{
+.footer h5 span {
     color: #4E80EE;
 }
 
-@media screen and (max-width:480px){
-        .container-content{
-            width: 350px;
-            margin-left: 20px;
-            margin-right: 0px;
-            margin-top: 10px;
-        }
+@media screen and (max-width:480px) {
+    .container{
+        display: flex;
+        justify-content: center;
+    }
 
-        .heading h1 {
-            font-size: 1.5rem;
-            width: 20rem;
-            margin-left: -2.5rem;
-        }
 
-        .heading p{
-            font-size:0.58rem;
-        }
+    .container-content {
+        width: 350px;
+        margin-left: 20px;
+        margin-right: 0px;
+        margin-top: 10px;
+    }
 
-        .main h1  {
-            font-size: 1.5rem;
-        }
-        .main p{
-            font-size: 0.85rem;
-            padding-bottom:0px ;
-            line-height: 1.5rem;
+    .heading h1 {
+        font-size: 1.5rem;
+        width: 20rem;
+        margin-left: -2.5rem;
+    }
 
-        }
+    .heading p {
+        font-size: 0.58rem;
+    }
 
-        .main ol li {
-            font-size:0.95rem;
-            padding: 0px;
-            font-size: 12px;
-        }
+    .main h1 {
+        font-size: 1.5rem;
+    }
 
-        .main ol{
-            padding-left: 30px;
-            padding-bottom: 2rem;
-            padding-right: 1rem;
-        }
+    .main p {
+        font-size: 0.85rem;
+        padding-bottom: 0px;
+        line-height: 1.5rem;
 
-        .paraone{
-            padding-bottom: 10px;
-        }
-        hr{
-            width: 20rem;
-        }
+    }
 
-        .footer h1{
-            width: 400px;
-            font-size: 20px;
+    .main ol li {
+        font-size: 0.95rem;
+        padding: 0px;
+        font-size: 12px;
+    }
 
-        }
+    .main ol {
+        padding-left: 30px;
+        padding-bottom: 2rem;
+        padding-right: 1rem;
+    }
 
-        .footer p{
-            font-size: 0.91rem;
-            width: 100%;
-            line-height: 20px;
-            padding-bottom:6%
-        }
+    .paraone {
+        padding-bottom: 10px;
+    }
 
-        .footer li{
-            font-size: 0.78rem;
-        }
+    hr {
+        width: 20rem;
+    }
 
-        .footer h5{
-            font-size: 1rem;
-            padding-top: 10px;
-        }
-        .footer h5 span{
-            font-size: 1rem;
+    .footer h1 {
+        width: 400px;
+        font-size: 20px;
 
-        }
+    }
+
+    .footer p {
+        font-size: 0.91rem;
+        width: 100%;
+        line-height: 20px;
+        padding-bottom: 6%
+    }
+
+    .footer li {
+        font-size: 0.78rem;
+    }
+
+    .footer h5 {
+        font-size: 1rem;
+        padding-top: 10px;
+    }
+
+    .footer h5 span {
+        font-size: 1rem;
+
+    }
 
 
 }
